--- a/.github/workflows/valist.yml
+++ b/.github/workflows/valist.yml
@@ -13,4 +13,4 @@ jobs:
           account: acme-co
           project: test1
           release: 1.0.7
-          files: '*'
+          files: 'README.md'
