--- a/.github/workflows/valist.yml
+++ b/.github/workflows/valist.yml
@@ -12,5 +12,5 @@ jobs:
           private-key: ${{ secrets.VALIST_SIGNER }}
           account: acme-co
           project: test1
-          release: 1.0.8
-          files: 'README.md'
+          release: 1.0.9
+          files: '/github/workspace/**'
