--- a/.github/workflows/valist.yml
+++ b/.github/workflows/valist.yml
@@ -13,5 +13,5 @@ jobs:
           private-key: ${{ secrets.VALIST_SIGNER }}
           account: acme-co
           project: test1
-          release: 1.1.0
-          files: '/github/workspace/**'
+          release: 1.1.1
+          files: '**'
