--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
           fileName: "*"
       - uses: valist-io/valist-github-action@v2.3.0
         with:
-          private-key: ${{ secrets.PRIVATE_KEY }}
+          private-key: ${{ secrets.VALIST_SIGNER }}
           account: test-0987-1
           project: go-binary
           release: ${{ github.ref_name }}
