--- a/.github/workflows/valist.yml
+++ b/.github/workflows/valist.yml
@@ -10,10 +10,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
             path: './'
-      - uses: valist-io/valist-github-action@v2.2.0
+      - uses: valist-io/valist-github-action@v2.3.0
         with:
           private-key: ${{ secrets.VALIST_SIGNER }}
-          account: acme-co
-          project: test1
-          release: 1.1.3
-          files: 'src'
+          account: test0987-1
+          project: test
+          release: ${{ env.TIMESTAMP }}
+          files: './'
