--- a/.github/workflows/valist.yml
+++ b/.github/workflows/valist.yml
@@ -16,4 +16,4 @@ jobs:
           account: test0987-1
           project: test
           release: ${{ env.TIMESTAMP }}
-          files: './'
+          path: './'
