--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,3 +20,8 @@ jobs:
           project: test
           release: ${{ github.ref_name }}
           path: '.'
+          install-name: 'hello-go'
+          install-darwin-amd64: './hello-darwin-amd64'
+          install-darwin-arm64: './hello-darwin-arm64'
+          install-linux-amd64: './hello-linux-amd64'
+          install-windows-amd64: './hello-windows-amd64'
