--- a/.github/workflows/valist.yml
+++ b/.github/workflows/valist.yml
@@ -11,10 +11,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
             path: '.'
-      - uses: valist-io/valist-github-action@v2.3.0
+      - uses: valist-io/valist-github-action@dev
         with:
           private-key: ${{ secrets.VALIST_SIGNER }}
           account: test0987-1
-          project: test
+          project: test3
           release: ${{ env.TIMESTAMP }}
           path: '.'
