--- a/.github/workflows/valist.yml
+++ b/.github/workflows/valist.yml
@@ -15,6 +15,6 @@ jobs:
         with:
           private-key: ${{ secrets.VALIST_SIGNER }}
           account: test0987-1
-          project: test3
+          project: test
           release: ${{ env.TIMESTAMP }}
           path: '.'
