--- a/.github/workflows/berty.yml
+++ b/.github/workflows/berty.yml
@@ -18,8 +18,8 @@ jobs:
         with:
           private-key: ${{ secrets.VALIST_SIGNER }}
           account: test0987-1
-          project: test
-          release: ${{ github.ref_name }}
+          project: test1
+          release: 0.0.7
           path: '.'
           # this section is optional if you have a multi-platform release
           install-name: 'berty'
