--- a/.github/workflows/berty.yml
+++ b/.github/workflows/berty.yml
@@ -14,12 +14,12 @@ jobs:
           tarBall: true
           zipBall: true
           fileName: "*"
-      - uses: valist-io/valist-github-action@dev
+      - uses: valist-io/valist-github-action@v2.3.1
         with:
           private-key: ${{ secrets.VALIST_SIGNER }}
           account: test0987-1
           project: test1
-          release: 0.0.7
+          release: 0.0.8
           path: '.'
           # this section is optional if you have a multi-platform release
           install-name: 'berty'
