--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
           tarBall: true
           zipBall: true
           fileName: "*"
-      - uses: valist-io/valist-github-action@v2.3.1
+      - uses: valist-io/valist-github-action@dev
         with:
           private-key: ${{ secrets.VALIST_SIGNER }}
           account: test0987-1
