add example react build

--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -17,4 +17,4 @@ jobs:
           account: test0987-1
           project: test
           release: ${{ env.TIMESTAMP }}
-          path: '.'
+          path: './build'
