--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Valist Snapshot
+name: Valist Publish
 on:
   push:
     branches:
@@ -11,10 +11,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
             path: '.'
-      - uses: valist-io/valist-github-action@v2.4.0
+      - uses: valist-io/valist-github-action@dev
         with:
           private-key: ${{ secrets.VALIST_SIGNER }}
-          account: test0987-1
-          project: test
+          account: acme-co
+          project: test1
           release: ${{ env.TIMESTAMP }}
           path: './build'
