--- a/valist.yml
+++ b/valist.yml
@@ -1,10 +1,4 @@
-account: awantoch
-project: multi-platform
+account: acme-co
+project: test1
 release: 0.0.1
-files: dist/*
-install:
-  name: hello-go
-  darwin_amd64: dist/hello-darwin-amd64
-  darwin_arm64: dist/hello-darwin-arm64
-  linux_amd64: dist/hello-linux-amd64
-  windows_amd64: dist/hello-windows-amd64
+files: build
