--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,10 +11,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
             path: '.'
-      - uses: valist-io/valist-github-action@dev
+      - uses: valist-io/valist-github-action@2.5.3
         with:
           private-key: ${{ secrets.VALIST_SIGNER }}
           account: acme-co
           project: test1
-          release: 1.1.39
+          release: 1.1.41
           path: './build'
