--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
             path: '.'
-      - uses: valist-io/valist-github-action@2.5.3
+      - uses: valist-io/valist-github-action@v2.5.3
         with:
           private-key: ${{ secrets.VALIST_SIGNER }}
           account: acme-co
